# MotionMySql

./: MotionMySql.py  README.md  __ init __.py  pyproject.toml  setup.cfg  setup.py
