[metadata]
name = MotionMySql
version = 0.0.1
author = CasearF
author_email = casearx@gmail.com
description = Dynamically constructing add/delete/reference statements using python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CasearF/MotionMySql
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pymysql>=0.9.3